Used test code snippet for layout bugs search

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -25,3 +25,9 @@ html {
 body {
   box-sizing: border-box;
 }
+/** {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+}
+for tesing purposes*/
